Mac: Fix infobar anchor under Harmony.

For the most part, this is just a rename of `pageInfoBubblePointY` to
`infoBarAnchorPointY` since it's only used for InfoBars, and never used
for the page info bubble.

page_info_bubble_controller.mm and other things anchoring off the
location icon just use LocationBarViewMac::GetPageInfoBubblePoint()
directly.

Adds LocationBarViewMac::GetInfoBarAnchorPoint() since InfoBars will
still have arrows under Harmony, while bubbles will not.

BUG=689906

Review-Url: https://codereview.chromium.org/2862003004
Cr-Commit-Position: refs/heads/master@{#470202}

Former-commit-id: 3248f4867e7ac406e88ac458ae1d34c168506636